[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_molecule3d"
version = "0.0.8"
description = "FAIR Chem UMA-style Gradio component for 3D molecular visualization with multi-model PDB animation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
  { name = "Faris FLAIFIL", email = "faris.flaifil@example.com" },
  { name = "FAIR Chemistry Team", email = "fairchemistry@meta.com" }
]
keywords = [
  "molecular visualization",
  "3D structures",
  "chemistry",
  "gradio",
  "gradio custom component",
  "protein",
  "crystal structures",
  "bioinformatics",
  "computational chemistry",
  "molecular dynamics",
  "materials science",
  "FAIR Chemistry",
  "UMA"
]
# Dependencies required for the package
dependencies = [
  "gradio>=4.0,<6.0",
  "ase>=3.22.0",
  "numpy>=1.20.0"
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
  'Topic :: Scientific/Engineering :: Chemistry',
  'Topic :: Scientific/Engineering :: Physics',
  'License :: OSI Approved :: MIT License',
]

[project.urls]
Homepage = "https://github.com/FarisFLAIFIL/gradio-molecule3d"
Repository = "https://github.com/FarisFLAIFIL/gradio-molecule3d"
"Bug Tracker" = "https://github.com/FarisFLAIFIL/gradio-molecule3d/issues"
"FAIR Chemistry UMA" = "https://huggingface.co/spaces/facebook/fairchem_uma_demo"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = [
  "/backend/gradio_molecule3d/templates",
  "/frontend/dist",
  "*.pyi"
]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_molecule3d"]

[tool.hatch.build.targets.wheel.shared-data]
"frontend/dist" = "gradio_molecule3d/frontend/dist"
